--- a/bootstrap-5.3.2-dist/index.html
+++ b/bootstrap-5.3.2-dist/index.html
@@ -173,7 +173,7 @@
                         <div class="row">
                             <h3 class="m-3">Youtube</h3>
                             <div class="container d-flex justify-content-center">
-                                <iframe class="p-3" src="https://www.youtube.com/embed/i2giZNNZXH8" >
+                                <iframe class="img-fluid p-3" src="https://www.youtube.com/embed/i2giZNNZXH8" >
 
                                 </iframe>
                             </div>
